# MaxwellPhysicsMIPT

./: CMakeLists.txt
include/: Atom.h  Physics.h  PlotDrawer.h  Utility.h
src/: Atom.cpp  Physics.cpp  PlotDrawer.cpp  Utility.cpp  main.cpp
